--- a/css/main.css
+++ b/css/main.css
@@ -530,7 +530,8 @@ section {
   }
 }
 
-/*.main-button {
+@media screen and (min-width: 1200px) {
+  .main-button {
     font-family: var(--main-font);
     font-weight: bold;
     font-size: 16px;
@@ -541,20 +542,19 @@ section {
     letter-spacing: 0.06em;
     cursor: pointer;
     color: var(--standart-color);
-    background: var(--focus-color );
+    background: var(--focus-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     padding: 10px 32px;
     margin-left: auto;
     margin-right: auto;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
+  }
+  .main-button:hover, .main-button:focus {
     background-color: var(--focus-color);
-    }
-}*/
+  }
+}
+
 .cont {
   padding-top: 0px;
 }
