--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,154 +1,467 @@
-.footer-bg {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background: var(--footer-bg-color)
-}
-.main-footer {
-    display: flex;
-    align-items: baseline;
-}
-.addres-font {
-    font-style: normal;
-    margin-top: 20px;
-}
-.list-all__marg {
-    margin-bottom: 9px;
-}
-.logo-dark-theme {
-    top: 2157px;
-    color: var(--standart-color);
-}
-.physical-adress {
-    font-family: var(--main-font);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--standart-color);
-}
-.mail-adress {
-    font-family: var(--main-font);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--footer-link-color)
-}
-.phone-number {
-    font-family: var(--main-font);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--footer-link-color)
-}
-.invitation-footer {
-    margin-left: 70px;
-}
-.invitation {
-    color: var(--standart-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-}
-.footer-set__footer-icons-color {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-set__footer-icons-list {
-    &:not(:last-child) {
-        margin-right: 10px;
-    } 
-}
-.footer-set__footer-icons {
-    fill: var(--standart-color);
-}
-.footer-icons-link:hover,
-.footer-icons-link:focus  {
-    background-color: var(--focus-color);
-
-    &.footer-icons-color,
-    &.footer-icons-color {
-        background-color: var(--focus-color);
-}
-}
-.follow {
-    margin-left: auto;
-    width: 570px;
-}
-.follow__reminder {
-    width: 219px;
-    height: 16px;
-    font-family: var(--main-font);
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-
-    color: var(--standart-color);
-    margin-bottom: 20px;
-}
-.follow__wrapper {
-    position: relative;
-    display: flex;
-}
-.mail-mark {
-    position: absolute;
-    top: 50%;
-    left: 16px;
-    transform: translateY(-50%);
+@media screen and (max-width: 768px) {
+    .footer-bg {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        background: var(--footer-bg-color);
+        display: block;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    .main-footer {
+        display: block;
+        align-items: baseline;
+    }
     
-    font-family: var(--main-font);
-    font-size: 16px;
-    line-height: 1.25;
+    .addres-font {
+        font-style: normal;
+        margin-top: 20px;
+    }
+    .list-all__marg {
+        margin-bottom: 9px;
+    }
+    .logo-dark-theme {
+        top: 4914px;
+        color: var(--standart-color);
+    }
+    .physical-adress {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--standart-color);
+    }
+    .mail-adress {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--footer-link-color)
+    }
+    .phone-number {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--footer-link-color)
+    }
+    .invitation-footer {
+        display: block;
+        padding-top: 0px;
+    }
+    .invitation {
+        display: block;
+        margin-bottom: 20px;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--standart-color);
+    }
+    .footer-set {
+        display: flex;
+        justify-content: center;
+    }
+    .footer-set__footer-icons-link {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.1);
+    
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .footer-set__footer-icons-list {
+        &:not(:last-child) {
+            margin-right: 10px;
+        } 
+    }
+    .footer-set__footer-icons {
+        fill: var(--standart-color);
+    }
+    .footer-icons-link:hover,
+    .footer-icons-link:focus  {
+        background-color: var(--focus-color);
+    
+        &.footer-icons-color,
+        &.footer-icons-color {
+            background-color: var(--focus-color);
+    }
+    }
+    .follow {
+        /*margin-left: auto;*/
+        padding-top: 60px;
+    }
+    .follow__reminder {
+        display: block;
+        margin-bottom: 20px;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    
+        color: var(--standart-color);
+    }
+    .follow__wrapper {
+        position: relative;
+        display: block;
+    }
+    .mail-mark {
+        font-family: var(--main-font);
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    .mail__follower {
+        margin-right: 12px;
+        margin-bottom: 20px;
+        width: 100%;
+        height: 50px;
+        border-radius: 4px;
+        border: 1px solid rgba(255,255,255,0.3);
+        background: var(--footer-bg-color);
+        padding-left: 16px;
+        outline: none;
+        color: var(--standart-color);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .follow__btn {
+        display: inline-flex;
+        margin: 0 auto;
+        padding: 10px 28px 10px 29px;
+        align-items: center;
+        text-align: center;
+        min-width: 200px;
+        background: var(--focus-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border: none;
+        font-family: var(--main-font);
+        color: var(--standart-color);
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.06em;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .follow__icon {
+        fill: var(--standart-color);
+        margin-left: 10px;
+    }
 }
-.mail__follower {
-    width: 358px;
-    height: 50px;
-    padding-left: 16px;
 
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background-color: var(--footer-bg-color);
-    color: var(--standart-color);
+@media screen and (min-width: 769px) {
+    .footer-bg {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        background: var(--footer-bg-color);
+        display: block;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    .main-footer {
+        display: block;
+        align-items: baseline;
+    }
+    .footer-tablet {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-around;
+    }
+    .footer-tablet__address {
+        display: block;
+    }
+    .addres-font {
+        font-style: normal;
+        margin-top: 20px;
+    }
+    .list-all__marg {
+        margin-bottom: 9px;
+    }
+    .logo-dark-theme {
+        top: 2157px;
+        color: var(--standart-color);
+    }
+    .physical-adress {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--standart-color);
+    }
+    .mail-adress {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--footer-link-color);
+    }
+    .phone-number {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--footer-link-color);
+    }
+    .invitation-footer {
+        margin-left: 70px;
+    }
+    .invitation {
+        color: var(--standart-color);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+    .footer-set__footer-icons-color {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.1);
+    
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .footer-set__footer-icons-list {
+        &:not(:last-child) {
+            margin-right: 10px;
+        } 
+    }
+    .footer-set__footer-icons {
+        fill: var(--standart-color);
+    }
+    .footer-icons-link:hover,
+    .footer-icons-link:focus  {
+        background-color: var(--focus-color);
+    
+        &.footer-icons-color,
+        &.footer-icons-color {
+            background-color: var(--focus-color);
+    }
+    }
+    .follow {
+        /*margin-left: auto;*/
+        padding-top: 60px;
+    }
+    .follow__reminder {
+        display: block;
+        margin-bottom: 20px;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    
+        color: var(--standart-color);
+    }
+    .follow__wrapper {
+        position: relative;
+        display: block;
+    }
+    .mail-mark {
+        font-family: var(--main-font);
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    .mail__follower {
+        margin-right: 12px;
+        margin-bottom: 20px;
+        width: 100%;
+        height: 50px;
+        border-radius: 4px;
+        border: 1px solid rgba(255,255,255,0.3);
+        background: var(--footer-bg-color);
+        padding-left: 16px;
+        outline: none;
+        color: var(--standart-color);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .follow__btn {
+        display: inline-flex;
+        margin: 0 auto;
+        padding: 10px 28px 10px 29px;
+        align-items: center;
+        text-align: center;
+        min-width: 200px;
+        background: var(--focus-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border: none;
+        font-family: var(--main-font);
+        color: var(--standart-color);
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.06em;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .follow__icon {
+        fill: var(--standart-color);
+        margin-left: 10px;
+    }
 }
-.follow__btn {
-    position: relative;
-    width: 200px;
-    margin-left: 12px;
-    padding-left: 29px;
 
-    font-family: var(--main-font);
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
-
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-
-    color: var(--standart-color);
-
-    background: #2196F3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-}
-.follow__icon {
-    position: absolute;
-    top: 50%;
-    right: 28px;
-    transform: translateY(-50%);
-
-    fill: var(--standart-color);
-    margin-left: 10px;
+@media screen and (win-width: 1200px) {
+    .footer-bg {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        background: var(--footer-bg-color)
+    }
+    .main-footer {
+        display: flex;
+        align-items: baseline;
+    }
+    .addres-font {
+        font-style: normal;
+        margin-top: 20px;
+    }
+    .list-all__marg {
+        margin-bottom: 9px;
+    }
+    .logo-dark-theme {
+        top: 2157px;
+        color: var(--standart-color);
+    }
+    .physical-adress {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--standart-color);
+    }
+    .mail-adress {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--footer-link-color)
+    }
+    .phone-number {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--footer-link-color)
+    }
+    .invitation-footer {
+        margin-left: 70px;
+    }
+    .invitation {
+        color: var(--standart-color);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+    .footer-set__footer-icons-color {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.1);
+    
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .footer-set__footer-icons-list {
+        &:not(:last-child) {
+            margin-right: 10px;
+        } 
+    }
+    .footer-set__footer-icons {
+        fill: var(--standart-color);
+    }
+    .footer-icons-link:hover,
+    .footer-icons-link:focus  {
+        background-color: var(--focus-color);
+    
+        &.footer-icons-color,
+        &.footer-icons-color {
+            background-color: var(--focus-color);
+    }
+    }
+    .follow {
+        margin-left: auto;
+        width: 570px;
+    }
+    .follow__reminder {
+        width: 219px;
+        height: 16px;
+        font-family: var(--main-font);
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    
+        color: var(--standart-color);
+        margin-bottom: 20px;
+    }
+    .follow__wrapper {
+        position: relative;
+        display: flex;
+    }
+    .mail-mark {
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        transform: translateY(-50%);
+        
+        font-family: var(--main-font);
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    .mail__follower {
+        width: 358px;
+        height: 50px;
+        padding-left: 16px;
+    
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: var(--footer-bg-color);
+        color: var(--standart-color);
+    }
+    .follow__btn {
+        position: relative;
+        width: 200px;
+        margin-left: 12px;
+        padding-left: 29px;
+    
+        font-family: var(--main-font);
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 1.87;
+    
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.06em;
+    
+        color: var(--standart-color);
+    
+        background: #2196F3;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+    }
+    .follow__icon {
+        position: absolute;
+        top: 50%;
+        right: 28px;
+        transform: translateY(-50%);
+    
+        fill: var(--standart-color);
+        margin-left: 10px;
+    }
 }
