--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -73,7 +73,7 @@
     }
 }
 
-@media screen and (max-width:1199px) {
+@media screen and (min-width: 769px) {
     .team-container {
         display: flexbox;
         flex-wrap: wrap;
