--- a/sass/layout/_work-gallery.scss
+++ b/sass/layout/_work-gallery.scss
@@ -1,3 +1,183 @@
+@media screen and (min-width: 320) {
+    .work-gallery {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .main-set {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: start;
+        margin-right: -8px;
+        margin-top: -15px;
+        margin-bottom: 40px;
+    }
+    .main-set__items {
+        margin-right: 8px;
+        
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            background-color: var(--focus-color);
+        }
+    }
+    .work-content {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-right: 24px;
+        padding-left: 24px;
+    }
+    .buttom-bg {
+        background: var(--standart-color);
+        border: 1px solid #EEEEEE;
+        box-sizing: border-box;
+    }
+    .portfolio-btn {
+        font-family: inherit;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.62;
+        text-align: center;
+        letter-spacing: 0.03em;
+        cursor: pointer;
+        color: var(--main-text-color);
+        background-color: var(--team-bg-color);
+        border-radius: 4px;
+        display: flex;
+        flex-direction: row;
+        border: none;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            background-color: var(--focus-color );
+            color: var(--standart-color);
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
+    }
+    
+    .works-set {
+        display: flex;
+        flex-wrap: wrap;
+        
+        align-items: flex-start;
+        align-content: center;
+        margin-top: -30px;
+        margin-left: -30px;
+    }
+    .works-set__item {
+        margin-top: 30px;
+        margin-left: 30px;
+        flex-basis: calc((100% - 90px) / 3);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+        }
+    
+        &:hover .overlay,
+        &:focus .overlay {
+            opacity: 1;
+            transform: translateY(0%);
+        }
+    }
+    .work1 {
+        width: 100%;
+        height: 100%;
+        background: url(portfolio1.jpg);
+    }
+    .work2 {
+        width: 100%;
+        height: 100%;
+        background: url(portfolio2.jpg);
+    }
+    .work3 {
+        width: 100%;
+        height: 100%;
+        background: url(portfolio-1.jpg);
+    }
+    .work4 {
+        width: 100%;
+        height: 100%;
+        background: url(portfolio-2.jpg);
+    }
+    .work5 {
+        width: 100%;
+        height: 100%;
+        background: url(portfolio5.jpg);
+    }
+    .work6 {
+        width: 100%;
+        height: 100%;
+        background: url(111.jpg);
+    }
+    .work7 {
+        width: 100%;
+        height: 100%;
+        background: url(portfolio7.jpg);
+    }
+    .work8 {
+        width: 100%;
+        height: 100%;
+        background: url(portfolio8.jpg);
+    }
+    .work9 {
+        width: 100%;
+        height: 100%;
+        background: url(2910404.jpg);
+    }
+    
+    .work-content__name {
+        font-family: var(--main-font);
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+        color:var(--main-text-color);
+        margin-bottom: 4px;
+    }
+    .work-content__explanation {
+        font-family: var(--main-font);
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.03em;
+        color: var(--secondary-text-color);
+        }
+    .overlay-wrapper {
+        position: relative;
+        overflow: hidden;
+    
+        &:hover .overlay,
+        &:focus .overlay {
+            opacity: 1;
+            transform: translateY(0%);
+        }
+    }
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        padding-top: 63px;
+        padding-bottom: 63px;
+        padding-right: 24px;
+        padding-left: 24px;
+        opacity: 0;
+    
+        background-color: rgba(33, 150, 243, 0.9);
+        color: var(--standart-color);
+        
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    }
+}
+
+
+/*
 .main-set {
     display: flex;
     justify-content: center;
@@ -54,7 +234,7 @@
 .works-set {
     display: flex;
     flex-wrap: wrap;
-    /*align-items: center;*/
+   
     align-items: flex-start;
     align-content: center;
     margin-top: -30px;
@@ -167,3 +347,4 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+*/
