--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,8 @@
 .header {
     padding-top: 16px;
     padding-bottom: 16px;
+    
+    border-bottom: 1px solid #ececec;;
 }
 
 .logo-light-theme {
