--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -252,11 +252,11 @@
     }
 
 @media screen and (min-width: 1200px) {
-    header {
+    .header {
         border-bottom: 1px solid #ECECEC;
+        padding-bottom: 0px;
     }
     .header .container {
-        display: flex;
         align-items: center;
     }
     .logo-light-theme {
@@ -269,7 +269,7 @@
         align-items: center;
     }
     .list {
-        display: flex;
+        /*display: flex;*/
         align-items: center;
     }
     .header-bg {
@@ -282,27 +282,27 @@
         line-height: 1.14;
         letter-spacing: 0.02em;
         color:var(--main-text-color);
+        padding-top: 30px;
+        padding-bottom: 30px;
         align-items: center;
     
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .navigation-item {
+    .navigation-list {
         &:not(:last-child) {
             margin-right: 50px;
         }
     }
-    .secondary {
-        margin-left: 331px;
-    }
-    .navigation-item-secondary {
-        &:not(:last-child) {
-            margin-right: 50px;
-        }
-    }
+    
     .in-touch {
         display: flex;
         margin-left: auto;
-        align-items: center;
+        align-items: flex-start;
+        padding-top: 32px;
+        
+    }
+    .navigation-item__first {
+        margin-right: 30px;
     }
     .contact-link {
         display: flex;
