--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
     .clients-list {
         display: flex;
         flex-wrap: wrap;
