--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,7 @@ section {
     max-width: 480px;
     height: 100vw;
     padding: 48px 40px;
+    z-index: 50;
     transform: translateY(-100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -577,9 +578,6 @@ section {
   .about-container {
     display: flex;
     align-items: center;
-    margin-top: -30px;
-    margin-left: -30px;
-    padding-top: 50px;
   }
   .about-link:not(:last-child) {
     margin-right: 30px;
@@ -1421,6 +1419,7 @@ section {
     box-sizing: border-box;
   }
   .portfolio-btn {
+    padding: 6px 22px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -1544,6 +1543,11 @@ section {
     padding-right: 24px;
     padding-left: 24px;
     opacity: 0;
+    font-family: var(--main-font);
+    font-size: 18px;
+    line-height: 1.55;
+    /* or 156% */
+    letter-spacing: 0.03em;
     background-color: rgba(33, 150, 243, 0.9);
     color: var(--standart-color);
     transform: translateY(100%);
