--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -41,6 +41,7 @@
         max-width: 480px;
         height: 100vw;
         padding: 48px 40px;
+        z-index: 50;
 
         transform: translateY(-100%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
