--- a/sass/layout/_work-gallery.scss
+++ b/sass/layout/_work-gallery.scss
@@ -385,6 +385,7 @@
         box-sizing: border-box;
     }
     .portfolio-btn {
+        padding: 6px 22px;
         font-family: inherit;
         font-weight: 500;
         font-size: 16px;
@@ -517,6 +518,13 @@
         padding-right: 24px;
         padding-left: 24px;
         opacity: 0;
+
+        font-family: var(--main-font);
+        font-size: 18px;
+        line-height: 1.55;
+        /* or 156% */
+
+        letter-spacing: 0.03em;
     
         background-color: rgba(33, 150, 243, 0.9);
         color: var(--standart-color);
